// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ExposeRequireEnsureRuntimePlugin should expose part of runtime for scriptBuilder: 0.js 1`] = `
"Index: 0.js
===================================================================
--- 0.js	
+++ 0.js	
"
`;

exports[`ExposeRequireEnsureRuntimePlugin should expose part of runtime for scriptBuilder: 1.js 1`] = `
"Index: 1.js
===================================================================
--- 1.js	
+++ 1.js	
"
`;

exports[`ExposeRequireEnsureRuntimePlugin should expose part of runtime for scriptBuilder: main-module.js 1`] = `
"Index: main-module.js
===================================================================
--- main-module.js	
+++ main-module.js	
"
`;

exports[`ExposeRequireEnsureRuntimePlugin should expose part of runtime for scriptBuilder: other-module.js 1`] = `
"Index: other-module.js
===================================================================
--- other-module.js	
+++ other-module.js	
"
`;

exports[`ExposeRequireEnsureRuntimePlugin should expose part of runtime for scriptBuilder: runtime.js 1`] = `
"Index: runtime.js
===================================================================
--- runtime.js	
+++ runtime.js	
@@ -165,0 +165,2 @@
+/******/ 	__webpack_require__.CustomRuntime = __webpack_require__.CustomRuntime || {};
+/******/ 	__webpack_require__.CustomRuntime['sb'] = scriptBuilder;
@@ -194,0 +196,1 @@
+/******/ 		var scriptBuilder = __webpack_require__.CustomRuntime['sb'];
"
`;

exports[`ExposeRequireEnsureRuntimePlugin should expose part of runtime for scriptErrorHandler: 0.js 1`] = `
"Index: 0.js
===================================================================
--- 0.js	
+++ 0.js	
"
`;

exports[`ExposeRequireEnsureRuntimePlugin should expose part of runtime for scriptErrorHandler: 1.js 1`] = `
"Index: 1.js
===================================================================
--- 1.js	
+++ 1.js	
"
`;

exports[`ExposeRequireEnsureRuntimePlugin should expose part of runtime for scriptErrorHandler: main-module.js 1`] = `
"Index: main-module.js
===================================================================
--- main-module.js	
+++ main-module.js	
"
`;

exports[`ExposeRequireEnsureRuntimePlugin should expose part of runtime for scriptErrorHandler: other-module.js 1`] = `
"Index: other-module.js
===================================================================
--- other-module.js	
+++ other-module.js	
"
`;

exports[`ExposeRequireEnsureRuntimePlugin should expose part of runtime for scriptErrorHandler: runtime.js 1`] = `
"Index: runtime.js
===================================================================
--- runtime.js	
+++ runtime.js	
@@ -165,0 +165,2 @@
+/******/ 	__webpack_require__.CustomRuntime = __webpack_require__.CustomRuntime || {};
+/******/ 	__webpack_require__.CustomRuntime['eh'] = scriptErrorHandler;
@@ -194,0 +196,1 @@
+/******/ 		var scriptErrorHandler = __webpack_require__.CustomRuntime['eh'];
"
`;

exports[`ExposeRequireEnsureRuntimePlugin should expose part of runtime for scriptLoadHandler: 0.js 1`] = `
"Index: 0.js
===================================================================
--- 0.js	
+++ 0.js	
"
`;

exports[`ExposeRequireEnsureRuntimePlugin should expose part of runtime for scriptLoadHandler: 1.js 1`] = `
"Index: 1.js
===================================================================
--- 1.js	
+++ 1.js	
"
`;

exports[`ExposeRequireEnsureRuntimePlugin should expose part of runtime for scriptLoadHandler: main-module.js 1`] = `
"Index: main-module.js
===================================================================
--- main-module.js	
+++ main-module.js	
"
`;

exports[`ExposeRequireEnsureRuntimePlugin should expose part of runtime for scriptLoadHandler: other-module.js 1`] = `
"Index: other-module.js
===================================================================
--- other-module.js	
+++ other-module.js	
"
`;

exports[`ExposeRequireEnsureRuntimePlugin should expose part of runtime for scriptLoadHandler: runtime.js 1`] = `
"Index: runtime.js
===================================================================
--- runtime.js	
+++ runtime.js	
@@ -165,0 +165,2 @@
+/******/ 	__webpack_require__.CustomRuntime = __webpack_require__.CustomRuntime || {};
+/******/ 	__webpack_require__.CustomRuntime['lh'] = scriptLoadHandler;
@@ -194,0 +196,1 @@
+/******/ 		var scriptLoadHandler = __webpack_require__.CustomRuntime['lh'];
"
`;

exports[`ExposeRequireEnsureRuntimePlugin should expose part of runtime for scriptOptionsResolver: 0.js 1`] = `
"Index: 0.js
===================================================================
--- 0.js	
+++ 0.js	
"
`;

exports[`ExposeRequireEnsureRuntimePlugin should expose part of runtime for scriptOptionsResolver: 1.js 1`] = `
"Index: 1.js
===================================================================
--- 1.js	
+++ 1.js	
"
`;

exports[`ExposeRequireEnsureRuntimePlugin should expose part of runtime for scriptOptionsResolver: main-module.js 1`] = `
"Index: main-module.js
===================================================================
--- main-module.js	
+++ main-module.js	
"
`;

exports[`ExposeRequireEnsureRuntimePlugin should expose part of runtime for scriptOptionsResolver: other-module.js 1`] = `
"Index: other-module.js
===================================================================
--- other-module.js	
+++ other-module.js	
"
`;

exports[`ExposeRequireEnsureRuntimePlugin should expose part of runtime for scriptOptionsResolver: runtime.js 1`] = `
"Index: runtime.js
===================================================================
--- runtime.js	
+++ runtime.js	
@@ -165,0 +165,2 @@
+/******/ 	__webpack_require__.CustomRuntime = __webpack_require__.CustomRuntime || {};
+/******/ 	__webpack_require__.CustomRuntime['or'] = scriptOptionsResolver;
@@ -194,0 +196,1 @@
+/******/ 		var scriptOptionsResolver = __webpack_require__.CustomRuntime['or'];
"
`;

exports[`ExposeRequireEnsureRuntimePlugin should expose part of runtime for scriptUrlResolver: 0.js 1`] = `
"Index: 0.js
===================================================================
--- 0.js	
+++ 0.js	
"
`;

exports[`ExposeRequireEnsureRuntimePlugin should expose part of runtime for scriptUrlResolver: 1.js 1`] = `
"Index: 1.js
===================================================================
--- 1.js	
+++ 1.js	
"
`;

exports[`ExposeRequireEnsureRuntimePlugin should expose part of runtime for scriptUrlResolver: main-module.js 1`] = `
"Index: main-module.js
===================================================================
--- main-module.js	
+++ main-module.js	
"
`;

exports[`ExposeRequireEnsureRuntimePlugin should expose part of runtime for scriptUrlResolver: other-module.js 1`] = `
"Index: other-module.js
===================================================================
--- other-module.js	
+++ other-module.js	
"
`;

exports[`ExposeRequireEnsureRuntimePlugin should expose part of runtime for scriptUrlResolver: runtime.js 1`] = `
"Index: runtime.js
===================================================================
--- runtime.js	
+++ runtime.js	
@@ -165,0 +165,2 @@
+/******/ 	__webpack_require__.CustomRuntime = __webpack_require__.CustomRuntime || {};
+/******/ 	__webpack_require__.CustomRuntime['ur'] = scriptUrlResolver;
@@ -194,0 +196,1 @@
+/******/ 		var scriptUrlResolver = __webpack_require__.CustomRuntime['ur'];
"
`;

exports[`ExposeRequireEnsureRuntimePlugin should expose runtime in custom namespace: 0.js 1`] = `
"Index: 0.js
===================================================================
--- 0.js	
+++ 0.js	
"
`;

exports[`ExposeRequireEnsureRuntimePlugin should expose runtime in custom namespace: 1.js 1`] = `
"Index: 1.js
===================================================================
--- 1.js	
+++ 1.js	
"
`;

exports[`ExposeRequireEnsureRuntimePlugin should expose runtime in custom namespace: main-module.js 1`] = `
"Index: main-module.js
===================================================================
--- main-module.js	
+++ main-module.js	
"
`;

exports[`ExposeRequireEnsureRuntimePlugin should expose runtime in custom namespace: other-module.js 1`] = `
"Index: other-module.js
===================================================================
--- other-module.js	
+++ other-module.js	
"
`;

exports[`ExposeRequireEnsureRuntimePlugin should expose runtime in custom namespace: runtime.js 1`] = `
"Index: runtime.js
===================================================================
--- runtime.js	
+++ runtime.js	
@@ -165,0 +165,6 @@
+/******/ 	window.Ya = window.Ya || {};
+/******/ 	window.Ya['scriptBuilder'] = scriptBuilder;
+/******/ 	window.Ya['scriptUrlResolver'] = scriptUrlResolver;
+/******/ 	window.Ya['scriptOptionsResolver'] = scriptOptionsResolver;
+/******/ 	window.Ya['scriptLoadHandler'] = scriptLoadHandler;
+/******/ 	window.Ya['scriptErrorHandler'] = scriptErrorHandler;
@@ -194,0 +200,5 @@
+/******/ 		var scriptBuilder = window.Ya['scriptBuilder'];
+/******/ 		var scriptUrlResolver = window.Ya['scriptUrlResolver'];
+/******/ 		var scriptOptionsResolver = window.Ya['scriptOptionsResolver'];
+/******/ 		var scriptLoadHandler = window.Ya['scriptLoadHandler'];
+/******/ 		var scriptErrorHandler = window.Ya['scriptErrorHandler'];
"
`;

exports[`ExposeRequireEnsureRuntimePlugin should expose runtime in default namespace: 0.js 1`] = `
"Index: 0.js
===================================================================
--- 0.js	
+++ 0.js	
"
`;

exports[`ExposeRequireEnsureRuntimePlugin should expose runtime in default namespace: 1.js 1`] = `
"Index: 1.js
===================================================================
--- 1.js	
+++ 1.js	
"
`;

exports[`ExposeRequireEnsureRuntimePlugin should expose runtime in default namespace: main-module.js 1`] = `
"Index: main-module.js
===================================================================
--- main-module.js	
+++ main-module.js	
"
`;

exports[`ExposeRequireEnsureRuntimePlugin should expose runtime in default namespace: other-module.js 1`] = `
"Index: other-module.js
===================================================================
--- other-module.js	
+++ other-module.js	
"
`;

exports[`ExposeRequireEnsureRuntimePlugin should expose runtime in default namespace: runtime.js 1`] = `
"Index: runtime.js
===================================================================
--- runtime.js	
+++ runtime.js	
@@ -165,0 +165,6 @@
+/******/ 	__webpack_require__.CustomRuntime = __webpack_require__.CustomRuntime || {};
+/******/ 	__webpack_require__.CustomRuntime['scriptBuilder'] = scriptBuilder;
+/******/ 	__webpack_require__.CustomRuntime['scriptUrlResolver'] = scriptUrlResolver;
+/******/ 	__webpack_require__.CustomRuntime['scriptOptionsResolver'] = scriptOptionsResolver;
+/******/ 	__webpack_require__.CustomRuntime['scriptLoadHandler'] = scriptLoadHandler;
+/******/ 	__webpack_require__.CustomRuntime['scriptErrorHandler'] = scriptErrorHandler;
@@ -194,0 +200,7 @@
+/******/ 		var scriptBuilder = __webpack_require__.CustomRuntime['scriptBuilder'];
+/******/ 		var scriptUrlResolver = __webpack_require__.CustomRuntime['scriptUrlResolver'];
+/******/ 		var scriptOptionsResolver =
+/******/ 		  __webpack_require__.CustomRuntime['scriptOptionsResolver'];
+/******/ 		var scriptLoadHandler = __webpack_require__.CustomRuntime['scriptLoadHandler'];
+/******/ 		var scriptErrorHandler =
+/******/ 		  __webpack_require__.CustomRuntime['scriptErrorHandler'];
"
`;
